# SimpleServer

./: CMakeLists.txt  Makefile  README.md
include/: common.h  define.h  logger.h  packagemanager.h  simplesocket.h  tcpserver.h  tcpsocket.h  udpserver.h
sample/: CMakeLists.txt
sample/sample1/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  logger.cpp  main.cpp  simplesocket.cpp  tcpserver.cpp  tcpsocket.cpp  udpserver.cpp
