
#最低版本
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
#头文件目录
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
 
#查找当前目录下所有源文件
#并将文件名保存在DIR_SOURECE
AUX_SOURCE_DIRECTORY(. DIR_SAMPLE1_SOURCE)
  

#指定生成目标
ADD_EXECUTABLE(Sample1 ${DIR_SAMPLE1_SOURCE})
 
#添加链接库

TARGET_LINK_LIBRARIES(Sample1 simplesocket)
